--- a/LimeStudio/app/src/main/res/layout/fragment_setup_im.xml
+++ b/LimeStudio/app/src/main/res/layout/fragment_setup_im.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="net.toload.main.hd.AddIMFragment">
+    tools:context="net.toload.main.hd.SetupImFragment">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -13,22 +13,22 @@
             android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:id="@+id/addImList"
+            android:id="@+id/SetupImList"
             android:padding="10dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="@string/add_im_import"
-                android:id="@+id/add_im_input_im" />
+                android:text="@string/setup_im_import"
+                android:id="@+id/setup_im_input_im" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="@string/add_im_import_description"
-                android:id="@+id/btnAddIm"
+                android:text="@string/setup_im_import_description"
+                android:id="@+id/btnSetupIm"
                 android:layout_marginBottom="5dp" />
 
             <TableLayout
@@ -43,8 +43,8 @@
                     <Button
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="@string/add_im_import_standard"
-                        android:id="@+id/btnAddImImportStandard"
+                        android:text="@string/setup_im_import_standard"
+                        android:id="@+id/btnSetupImImportStandard"
                         android:layout_gravity="center_horizontal"
                         android:layout_weight="1"
                         android:padding="5dp"
@@ -54,8 +54,8 @@
                     <Button
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="@string/add_im_import_related"
-                        android:id="@+id/btnAddImImportRelated"
+                        android:text="@string/setup_im_import_related"
+                        android:id="@+id/btnSetupImImportRelated"
                         android:layout_weight="1"
                         android:padding="5dp"
                         android:layout_marginLeft="10dp"
@@ -74,14 +74,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="@string/add_im_download"
+                android:text="@string/setup_im_download"
                 android:id="@+id/textView3" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="@string/add_im_download_description"
+                android:text="@string/setup_im_download_description"
                 android:id="@+id/textView5"
                 android:layout_marginBottom="5dp" />
 
@@ -98,7 +98,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:text="@string/im_phonetic"
-                        android:id="@+id/btnAddImPhonetic"
+                        android:id="@+id/btnSetupImPhonetic"
                         android:layout_weight="1"
                         android:padding="5dp"
                         android:layout_marginRight="10dp"
@@ -108,7 +108,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:text="@string/im_cj"
-                        android:id="@+id/btnAddImCj"
+                        android:id="@+id/btnSetupImCj"
                         android:layout_weight="1"
                         android:padding="5dp"
                         android:layout_marginLeft="10dp"
@@ -124,7 +124,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:text="@string/im_cj5"
-                        android:id="@+id/btnAddImCj5"
+                        android:id="@+id/btnSetupImCj5"
                         android:layout_weight="1"
                         android:padding="5dp"
                         android:layout_marginRight="10dp"
@@ -134,7 +134,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:text="@string/im_scj"
-                        android:id="@+id/btnAddImScj"
+                        android:id="@+id/btnSetupImScj"
                         android:layout_weight="1"
                         android:padding="5dp"
                         android:layout_marginLeft="10dp"
@@ -150,7 +150,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:text="@string/im_ecj"
-                        android:id="@+id/btnAddImEcj"
+                        android:id="@+id/btnSetupImEcj"
                         android:layout_weight="1"
                         android:padding="5dp"
                         android:layout_marginRight="10dp"
@@ -160,7 +160,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:text="@string/im_dayi"
-                        android:id="@+id/btnAddImDayi"
+                        android:id="@+id/btnSetupImDayi"
                         android:layout_weight="1"
                         android:padding="5dp"
                         android:layout_marginLeft="10dp"
@@ -176,7 +176,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:text="@string/im_ez"
-                        android:id="@+id/btnAddImEz"
+                        android:id="@+id/btnSetupImEz"
                         android:layout_weight="1"
                         android:padding="5dp"
                         android:layout_marginRight="10dp"
@@ -186,7 +186,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:text="@string/im_array"
-                        android:id="@+id/btnAddImArray"
+                        android:id="@+id/btnSetupImArray"
                         android:layout_weight="1"
                         android:padding="5dp"
                         android:layout_marginLeft="10dp"
@@ -202,7 +202,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:text="@string/im_array10"
-                        android:id="@+id/btnAddImArray10"
+                        android:id="@+id/btnSetupImArray10"
                         android:layout_weight="1"
                         android:padding="5dp"
                         android:layout_marginRight="10dp"
@@ -212,7 +212,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:text="@string/im_hs"
-                        android:id="@+id/btnAddImHs"
+                        android:id="@+id/btnSetupImHs"
                         android:layout_weight="1"
                         android:padding="5dp"
                         android:layout_marginLeft="10dp"
@@ -228,7 +228,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:text="@string/im_pinyin"
-                        android:id="@+id/btnAddImPinyin"
+                        android:id="@+id/btnSetupImPinyin"
                         android:layout_weight="1"
                         android:padding="5dp"
                         android:layout_marginRight="10dp"
@@ -237,7 +237,7 @@
                     <Button
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:id="@+id/btnAddImWb"
+                        android:id="@+id/btnSetupImWb"
                         android:layout_weight="1"
                         android:padding="5dp"
                         android:layout_marginLeft="10dp"
@@ -264,14 +264,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="@string/add_im_database"
+                android:text="@string/setup_im_database"
                 android:id="@+id/textView4" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="@string/add_im_database_description"
+                android:text="@string/setup_im_database_description"
                 android:id="@+id/textView6"
                 android:layout_marginBottom="5dp" />
 
@@ -287,8 +287,8 @@
                     <Button
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="@string/add_im_backup_local"
-                        android:id="@+id/btnAddImBackupLocal"
+                        android:text="@string/setup_im_backup_local"
+                        android:id="@+id/btnSetupImBackupLocal"
                         android:layout_gravity="center_horizontal"
                         android:layout_weight="1"
                         android:padding="5dp"
@@ -298,8 +298,8 @@
                     <Button
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="@string/add_im_restore_local"
-                        android:id="@+id/btnAddImRestoreLocal"
+                        android:text="@string/setup_im_restore_local"
+                        android:id="@+id/btnSetupImRestoreLocal"
                         android:layout_weight="1"
                         android:padding="5dp"
                         android:layout_marginLeft="10dp"
@@ -315,8 +315,8 @@
                     <Button
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="@string/add_im_backup_google"
-                        android:id="@+id/btnAddImBackupGoogle"
+                        android:text="@string/setup_im_backup_google"
+                        android:id="@+id/btnSetupImBackupGoogle"
                         android:layout_gravity="center_horizontal"
                         android:layout_weight="1"
                         android:padding="5dp"
@@ -326,8 +326,8 @@
                     <Button
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="@string/add_im_restore_google"
-                        android:id="@+id/btnAddImRestoreGoogle"
+                        android:text="@string/setup_im_restore_google"
+                        android:id="@+id/btnSetupImRestoreGoogle"
                         android:layout_weight="1"
                         android:padding="5dp"
                         android:layout_marginLeft="10dp"
@@ -342,8 +342,8 @@
                     <Button
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="@string/add_im_backup_dropbox"
-                        android:id="@+id/btnAddImBackupDropbox"
+                        android:text="@string/setup_im_backup_dropbox"
+                        android:id="@+id/btnSetupImBackupDropbox"
                         android:layout_weight="1"
                         android:padding="5dp"
                         android:layout_marginRight="10dp"
@@ -352,8 +352,8 @@
                     <Button
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="@string/add_im_restore_dropbox"
-                        android:id="@+id/btnAddImRestoreDropbox"
+                        android:text="@string/setup_im_restore_dropbox"
+                        android:id="@+id/btnSetupImRestoreDropbox"
                         android:layout_weight="1"
                         android:padding="5dp"
                         android:layout_marginLeft="10dp"
@@ -361,9 +361,22 @@
                 </TableRow>
             </TableLayout>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/setup_im_database" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/setup_im_database_description"
+                android:layout_marginBottom="5dp" />
+
         </LinearLayout>
 
     </ScrollView>
 
 </FrameLayout>
-<!-- From: file:/C:/Data/Development/Android/Studio/LIMEIMEAS/app/src/main/res/layout/fragment_add_im.xml -->
+<!-- From: file:/C:/Data/Development/Android/Studio/LIMEIMEAS/app/src/main/res/layout/fragment_setup_imim.xml -->
