--- a/LimeStudio/app/src/main/res/values/strings_settings.xml
+++ b/LimeStudio/app/src/main/res/values/strings_settings.xml
@@ -468,15 +468,15 @@
     <string name="l3_im_setting_button_reset">移除字根檔</string>
     <string name="l3_im_setting_button_select">選擇鍵盤對應</string>
 
-    <string name="l3_im_download_from_dayi">下載並安裝  OpenVanilla 大易字根</string>
+    <string name="l3_im_download_from_dayi">安裝 OpenVanilla 大易字根</string>
     <string name="l3_im_download_from_dayi_start">開始下載 OpenVanilla 大易字根</string>
     <string name="l3_im_download_from_dayi_install">開始安裝 OpenVanilla 大易字根</string>
 
-    <string name="l3_im_download_from_phonetic">下載並安裝 OpenVanilla 注音字根</string>
+    <string name="l3_im_download_from_phonetic">安裝 OpenVanilla 注音字根</string>
     <string name="l3_im_download_from_phonetic_start">開始下載 OpenVanilla 注音字根</string>
     <string name="l3_im_download_from_phonetic_install">開始安裝 OpenVanilla 注音字根</string>
 
-    <string name="l3_im_download_from_phonetic_adv">下載並安裝注音連打字根</string>
+    <string name="l3_im_download_from_phonetic_adv">安裝注音連打字根</string>
     <string name="l3_im_download_from_phonetic_adv_start">開始下載注音連打字根</string>
     <string name="l3_im_download_from_phonetic_adv_install">開始安裝注音連打字根</string>
     <string name="l3_im_download_from_phonetic_adv_warning">檔案容量較大系統會需要比較長的時間進行資料匯入</string>
@@ -490,65 +490,65 @@
     <string name="l3_im_download_from_cj_cns_start">開始下載倉頡CNS11643字根</string>
     <string name="l3_im_download_from_cj_cns_install">開始安裝倉頡CNS11643字根</string>
 
-    <string name="l3_im_download_from_cj">下載並安裝倉頡字根</string>
+    <string name="l3_im_download_from_cj">安裝倉頡字根</string>
     <string name="l3_im_download_from_cj_start">開始下載倉頡字根</string>
     <string name="l3_im_download_from_cj_install">開始安裝倉頡字根</string>
 
-    <string name="l3_im_download_from_cj5">下載並安裝倉頡五代字根</string>
+    <string name="l3_im_download_from_cj5">安裝倉頡五代字根</string>
     <string name="l3_im_download_from_cj5_start">開始下載倉頡五代字根</string>
     <string name="l3_im_download_from_cj5_install">開始安裝倉頡五代字根</string>
 
-    <string name="l3_im_download_from_ecj">下載並安裝速成字根</string>
+    <string name="l3_im_download_from_ecj">安裝速成字根</string>
     <string name="l3_im_download_from_ecj_start">開始下載速成字根</string>
     <string name="l3_im_download_from_ecj_install">開始安裝速成字根</string>
 
-    <string name="l3_im_download_from_scj">下載並安裝快倉字根</string>
+    <string name="l3_im_download_from_scj">安裝快倉字根</string>
     <string name="l3_im_download_from_scj_start">開始下載快倉字根</string>
     <string name="l3_im_download_from_scj_install">開始安裝快倉字根</string>
 
-    <string name="l3_im_download_from_array">下載並安裝老刀行列字根</string>
+    <string name="l3_im_download_from_array">安裝老刀行列字根</string>
     <string name="l3_im_download_from_array_start">開始下載老刀行列字根</string>
     <string name="l3_im_download_from_array_install">開始安裝老刀行列字根</string>
 
-    <string name="l3_im_download_from_array10">下載並安裝老刀行列10字根</string>
+    <string name="l3_im_download_from_array10">安裝老刀行列10字根</string>
     <string name="l3_im_download_from_array10_start">開始老刀下載行列10字根</string>
     <string name="l3_im_download_from_array10_install">開始安裝老刀行列10字根</string>
 
-    <string name="l3_im_download_from_ez">下載並安裝輕鬆字根</string>
+    <string name="l3_im_download_from_ez">安裝輕鬆字根</string>
     <string name="l3_im_download_from_ez_start">開始下載輕鬆字根</string>
     <string name="l3_im_download_from_ez_install">開始安裝輕鬆字根</string>
 
 
-    <string name="l3_im_download_from_cjk_phonetic">下載並安裝注音字根</string>
+    <string name="l3_im_download_from_cjk_phonetic">安裝注音字根</string>
     <string name="l3_im_download_from_cjk_phonetic_start">開始下載注音字根</string>
     <string name="l3_im_download_from_cjk_phonetic_install">開始安裝注音字根</string>
 
-    <string name="l3_im_download_from_cjk_pinyin">下載並安裝拼音字根</string>
+    <string name="l3_im_download_from_cjk_pinyin">安裝拼音字根</string>
     <string name="l3_im_download_from_cjk_pinyin_start">開始下載拼音字根</string>
     <string name="l3_im_download_from_cjk_pinyin_install">開始安裝拼音字根</string>
 
-    <string name="l3_im_download_from_cjk_ecj">下載並安裝速成字根</string>
+    <string name="l3_im_download_from_cjk_ecj">安裝速成字根</string>
     <string name="l3_im_download_from_cjk_ecj_start">開始下載速成字根</string>
     <string name="l3_im_download_from_cjk_ecj_install">開始安裝速成字根</string>
 
-    <string name="l3_im_download_from_cjk_cj">下載並安裝倉頡字根</string>
+    <string name="l3_im_download_from_cjk_cj">安裝倉頡字根</string>
     <string name="l3_im_download_from_cjk_cj_start">開始下載倉頡字根</string>
     <string name="l3_im_download_from_cjk_cj_install">開始安裝倉頡字根</string>
 
-    <string name="l3_im_download_from_cjk_hk_ecj">下載並安裝速成香港字字根</string>
+    <string name="l3_im_download_from_cjk_hk_ecj">安裝速成香港字字根</string>
     <string name="l3_im_download_from_cjk_hk_ecj_start">開始下載速成香港字字根</string>
     <string name="l3_im_download_from_cjk_hk_ecj_install">開始安裝速成香港字字根</string>
 
-    <string name="l3_im_download_from_cjk_hk_cj">下載並安裝倉頡香港字字根</string>
+    <string name="l3_im_download_from_cjk_hk_cj">安裝倉頡香港字字根</string>
     <string name="l3_im_download_from_cjk_hk_cj_start">開始下載倉頡香港字字根</string>
     <string name="l3_im_download_from_cjk_hk_cj_install">開始安裝倉頡香港字字根</string>
 
 
-    <string name="l3_im_download_from_pinyin_big5">下載並安裝拼音字根BIG5字集版本</string>
+    <string name="l3_im_download_from_pinyin_big5">安裝拼音字根BIG5字集版本</string>
     <string name="l3_im_download_from_pinyin_big5_start">開始下載拼音字根BIG5字集版本</string>
     <string name="l3_im_download_from_pinyin_big5_install">開始安裝拼音字根BIG5字集版本</string>
 
-    <string name="l3_im_download_from_pinyin_gb">下載並安裝拼音字根簡體字集版本</string>
+    <string name="l3_im_download_from_pinyin_gb">安裝拼音字根簡體字集版本</string>
     <string name="l3_im_download_from_pinyin_gb_start">開始下載拼音字根簡體字集版本</string>
     <string name="l3_im_download_from_pinyin_gb_install">開始安裝拼音字根簡體字集版本</string>
 
@@ -556,7 +556,7 @@
     <string name="l3_im_download_from_hs_start">開始下載華象直覺字根</string>
     <string name="l3_im_download_from_hs_install">開始安裝華象直覺字根</string>
 
-    <string name="l3_im_download_from_wb">下載並安裝筆順五碼字根\n香港長者資訊天地提供\nhttp://sf.net/projects/stroke5input</string>
+    <string name="l3_im_download_from_wb">安裝筆順五碼字根\n香港長者資訊天地提供\nhttp://sf.net/projects/stroke5input</string>
     <string name="l3_im_download_from_wb_start">開始下載筆順五碼字根</string>
     <string name="l3_im_download_from_wb_install">開始安裝筆順五碼字根</string>
 
