--- a/LimeStudio/app/src/main/res/layout/loading_progress.xml
+++ b/LimeStudio/app/src/main/res/layout/loading_progress.xml
@@ -2,7 +2,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:id="@+id/"
     android:padding="10dp">
 
     <Button
@@ -43,10 +42,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0%"
-        android:textSize="48sp"
+        android:textSize="36sp"
         android:layout_above="@+id/progressBar"
         android:layout_centerHorizontal="true"
         android:paddingTop="10dp"
-        android:paddingBottom="10dp"></TextView>
+        android:paddingBottom="10dp"
+        android:textIsSelectable="false"></TextView>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Large Text"
+        android:id="@+id/txtLoadingIm"
+        android:layout_above="@+id/textView1"
+        android:layout_centerHorizontal="true"
+        android:paddingBottom="10dp"
+        android:textSize="42sp" />
 
 </RelativeLayout>
