--- a/LimeStudio/app/src/main/res/layout/fragment_setup_im.xml
+++ b/LimeStudio/app/src/main/res/layout/fragment_setup_im.xml
@@ -59,7 +59,8 @@
                         android:layout_weight="1"
                         android:padding="5dp"
                         android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp" />
+                        android:layout_marginRight="10dp"
+                        android:enabled="false" />
                 </TableRow>
             </TableLayout>
 
