--- a/LimeStudio/app/src/main/res/values/strings_settings.xml
+++ b/LimeStudio/app/src/main/res/values/strings_settings.xml
@@ -556,7 +556,7 @@
     <string name="l3_im_download_from_hs_start">開始下載華象直覺字根</string>
     <string name="l3_im_download_from_hs_install">開始安裝華象直覺字根</string>
 
-    <string name="l3_im_download_from_wb">安裝筆順五碼字根\n香港長者資訊天地提供\nhttp://sf.net/projects/stroke5input</string>
+    <string name="l3_im_download_from_wb">安裝筆順五碼字根\n香港長者資訊天地提供</string>
     <string name="l3_im_download_from_wb_start">開始下載筆順五碼字根</string>
     <string name="l3_im_download_from_wb_install">開始安裝筆順五碼字根</string>
 
