--- a/LimeStudio/app/src/main/res/xml/method.xml
+++ b/LimeStudio/app/src/main/res/xml/method.xml
@@ -26,6 +26,12 @@
 <!-- for the Search Manager. -->
 
 <input-method xmlns:android="http://schemas.android.com/apk/res/android" 
-			  android:settingsActivity="net.toload.main.hd.LIMEMenu"/>
+					android:settingsActivity="net.toload.main.hd.MainActivity"
+					android:icon="@drawable/icon"
+					android:supportsSwitchingToNextInputMethod="true">
+
+</input-method>
+
+
 			  
 			  
