Hello Android Studio!! First commit from Jeremy.
Guided setup on startup page to activate and select LIME finished.

--- a/LimeStudio/app/src/main/res/layout/fragment_setup_im.xml
+++ b/LimeStudio/app/src/main/res/layout/fragment_setup_im.xml
@@ -23,6 +23,66 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/setup_im_system_settings"
+                android:id="@+id/setup_im_system_settings" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/setup_im_system_settings_description"
+                android:id="@+id/setup_im_system_settings_description"
+                android:layout_marginBottom="5dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/setup_im_system_impicker_description"
+                android:id="@+id/setup_im_system_impicker_description"
+                android:layout_marginBottom="5dp" />
+
+            <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal">
+
+                <TableRow
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent">
+
+                    <Button
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="@string/setup_im_system_settings"
+                        android:id="@+id/btnSetupImSystemSetting"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_weight="1"
+                        android:padding="5dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginLeft="10dp" />
+
+                </TableRow>
+                <TableRow
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent">
+
+                    <Button
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="@string/setup_im_system_selectLIME"
+                        android:id="@+id/btnSetupImSystemIMPicker"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_weight="1"
+                        android:padding="5dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginLeft="10dp" />
+
+                </TableRow>
+            </TableLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="@string/setup_im_import"
                 android:id="@+id/setup_im_input_im" />
 
