UI tweaks and bug fixes.
1. Bug fixes on composing text size setting.
2. Add back resolution dependent value settings.
3. Revert the dialog them to default them.  Default theme from vendors
is better than the android default theme.

--- a/LimeStudio/app/src/main/res/values/styles.xml
+++ b/LimeStudio/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
     </style>
     <style name="LIMEHDTheme" parent="android:Theme">
     </style>
-    <style name="LIMEHDDialogTheme" parent="android:Theme.Dialog">
+    <style name="LIMEHDDialogTheme" parent="android:style/Theme.Dialog">
     </style>
     <style name="LIMEkeyboardStyle">
         <item name="android:background">@drawable/keyboard_background</item>
