--- a/LimeStudio/app/src/main/res/layout/fragment_manage_related.xml
+++ b/LimeStudio/app/src/main/res/layout/fragment_manage_related.xml
@@ -18,32 +18,6 @@
             android:layout_height="wrap_content"
             android:layout_width="match_parent">
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/manage_related_management"
-                    android:id="@+id/txtManageRelatedTitle"
-                    android:layout_marginBottom="5dp"
-                    android:layout_weight="1" />
-
-
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/manage_related_add"
-                    android:id="@+id/btnManageRelatedAdd"
-                    android:layout_gravity="right"
-                    android:layout_column="11" />
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent">
-
             <EditText
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -56,7 +30,16 @@
                     android:layout_height="wrap_content"
                     android:text="@string/manage_related_search"
                     android:id="@+id/btnManageRelatedSearch"
-                    android:layout_column="11" />
+                    android:layout_column="11"
+                    android:textStyle="bold" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/manage_related_add"
+                android:id="@+id/btnManageRelatedAdd"
+                android:layout_column="11"
+                android:textStyle="bold" />
         </LinearLayout>
 
         <Space
@@ -94,7 +77,8 @@
             android:id="@+id/btnManageRelatedPrevious"
             android:layout_margin="2dp"
             android:paddingRight="10dp"
-            android:paddingLeft="10dp" />
+            android:paddingLeft="10dp"
+            android:textStyle="bold" />
 
 
         <TextView
@@ -114,19 +98,18 @@
             android:id="@+id/btnManageRelatedNext"
             android:layout_margin="2dp"
             android:paddingLeft="10dp"
-            android:paddingRight="10dp" />
+            android:paddingRight="10dp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
-    <com.vpadn.ads.VpadnBanner
-        android:id="@+id/vpadnBannerXML"
-        android:layout_width="wrap_content"
+
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        vpadn:adSize="SMART_BANNER"
-        vpadn:autoFresh="true"
-        vpadn:bannerId="8a8081824cfe92fa014d3707f493630b"
-        vpadn:loadAdOnCreate="true"
-        vpadn:platform="TW" />
+        android:id="@+id/adLayout">
+
+    </RelativeLayout>
 
 
 </LinearLayout>
