--- a/LimeStudio/app/src/main/res/values/attrs.xml
+++ b/LimeStudio/app/src/main/res/values/attrs.xml
@@ -41,6 +41,9 @@
         <!-- Color to use for the label in a key. -->
         <attr name="keyTextColor" format="color" />
 
+        <!-- Color to use for the label in a function key. -->
+        <attr name="functionKeyTextColor" format="color" />
+
         <!-- Color to use for the sub-label in a key. -->
         <attr name="keySubLabelTextColor" format="color" />
         
